--- a/package.json
+++ b/package.json
@@ -1,28 +1,39 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "db.js",
+  "name": "detection",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "server": "nodemon server.js"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
+    "@google/genai": "^0.7.0",
+    "@tailwindcss/vite": "^4.0.14",
     "axios": "^1.8.4",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^3.0.2",
-    "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.12.1",
-    "multer": "^1.4.5-lts.1"
+    "express": "^5.1.0",
+    "framer-motion": "^12.6.3",
+    "lucide-react": "^0.483.0",
+    "multer": "^1.4.5-lts.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-filepond": "^7.1.3",
+    "react-router-dom": "^7.3.0",
+    "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "@eslint/js": "^9.21.0",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.21.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^15.15.0",
+    "vite": "^6.2.0"
   }
 }
